pod/daemon.yml
apiVersion: apps/v1beta2
kind: DaemonSet
metadata:
  name: node-expo
spec:
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: daemon-pod
        image: google/cadvisor
