pod/dep-pod-antiaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendanti

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontendanti
  template:
    metadata:
      labels:
        app: frontendanti
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: backend
      containers:
      - image: samridhrakesh/appv1:v1
        name: nodejs
