pod/env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: en-pod
  labels:
    env: beta1
    tag: raj
    tag2: k8s
spec:
  containers:
  - image: httpd
    name: samridhk
    ports:
    - containerPort: 80
      protocol: TCP
