pod/node-aff-weight.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-aff-weight
  labels:
    env: beta1
    tag: raj
    tag2: k8s
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 80
        preference:
          matchExpressions:
          - key: capacity
            operator: In
            values:
            - low
      - weight: 20
        preference:
          matchExpressions:
          - key: resource
            operator: In
            values:
            - high

  containers:
  - image: httpd
    name: samridhk
    ports:
    - containerPort: 80
      protocol: TCP
