pod/node-aff.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-aff-exam1
  labels:
    env: beta1
    tag: raj
    tag2: k8s
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: resource
            operator: In
            values:
            - "high"
  containers:
  - image: httpd
    name: samridhk
    ports:
    - containerPort: 80
      protocol: TCP
