pod/polabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: samridh3-test
  labels:
    env: beta1
    tag: raj
    tag2: k8s
spec:
  containers:
  - image: httpd
    name: samridhk
    ports:
    - containerPort: 80
      protocol: TCP 
  nodeSelector:
    disktype: ssd
