pod/secpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret
spec:
  containers:
  - image: samridhrakesh/for:v1
    name: apache-conf
    volumeMounts:
    - name: nameof-sec
      mountPath: /var/tmp
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: nameof-sec
    secret:
     secretName: mysec
