pod/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    monitoring: "true"
  name: env
  labels:
    app: env
    tier: dev
spec:
  containers:
  - name: promethues
    image: httpd
