pod/appv1.yaml
apiVersion: v1
kind: Service 
metadata:
  name: appv1
spec:
  type: NodePort
  selector:
    env: appv1
  ports:
  - port: 80
    targetPort: 8080
