pod/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: techieglobusdep
spec:
  replicas: 2
  template:
    metadata:
      name: depv1
      labels:
        app: depv1
    spec:
      containers:
      - image: samridhrakesh/appv1:v1
        name: nodejs

---
apiVersion: v1
kind: Service 
metadata:
  name: depv1
spec:
  type: NodePort
  selector:
    app: depv1
  ports:
  - port: 80
    targetPort: 8080
